samples/_failures_safe/1761398185_398de0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_607e0e96.c: In function ‘main’:
./samples/SAFE/__tmp_607e0e96.c:164:5: error: expected declaration or statement at end of input
  164 |     }
      |     ^
